Add a TestRunner Class that Runs all Unit Tests at once.